@@ -205,17 +205,8 @@ class Codebird
       'ads/sandbox/insights/keywords/search',
       'ads/sandbox/line_items/placements',
       'ads/sandbox/stats/accounts/:account_id',
-      'ads/sandbox/stats/accounts/:account_id/campaigns',
-      'ads/sandbox/stats/accounts/:account_id/campaigns/:id',
-      'ads/sandbox/stats/accounts/:account_id/funding_instruments',
-      'ads/sandbox/stats/accounts/:account_id/funding_instruments/:id',
-      'ads/sandbox/stats/accounts/:account_id/line_items',
-      'ads/sandbox/stats/accounts/:account_id/line_items/:id',
-      'ads/sandbox/stats/accounts/:account_id/promoted_accounts',
-      'ads/sandbox/stats/accounts/:account_id/promoted_accounts/:id',
-      'ads/sandbox/stats/accounts/:account_id/promoted_tweets',
-      'ads/sandbox/stats/accounts/:account_id/promoted_tweets/:id',
       'ads/sandbox/stats/accounts/:account_id/reach/campaigns',
+      'ads/sandbox/stats/accounts/:account_id/reach/funding_instruments',
       'ads/sandbox/targeting_criteria/app_store_categories',
       'ads/sandbox/targeting_criteria/behavior_taxonomies',
       'ads/sandbox/targeting_criteria/behaviors',
@@ -232,17 +223,8 @@ class Codebird
       'ads/sandbox/targeting_criteria/tv_markets',
       'ads/sandbox/targeting_criteria/tv_shows',
       'ads/stats/accounts/:account_id',
-      'ads/stats/accounts/:account_id/campaigns',
-      'ads/stats/accounts/:account_id/campaigns/:id',
-      'ads/stats/accounts/:account_id/funding_instruments',
-      'ads/stats/accounts/:account_id/funding_instruments/:id',
-      'ads/stats/accounts/:account_id/line_items',
-      'ads/stats/accounts/:account_id/line_items/:id',
-      'ads/stats/accounts/:account_id/promoted_accounts',
-      'ads/stats/accounts/:account_id/promoted_accounts/:id',
-      'ads/stats/accounts/:account_id/promoted_tweets',
-      'ads/stats/accounts/:account_id/promoted_tweets/:id',
       'ads/stats/accounts/:account_id/reach/campaigns',
+      'ads/stats/accounts/:account_id/reach/funding_instruments',
       'ads/targeting_criteria/app_store_categories',
       'ads/targeting_criteria/behavior_taxonomies',
       'ads/targeting_criteria/behaviors',
@@ -389,7 +371,9 @@ class Codebird
       'ads/sandbox/batch/accounts/:account_id/line_items',
       'ads/sandbox/batch/accounts/:account_id/tailored_audiences',
       'ads/sandbox/batch/accounts/:account_id/targeting_criteria',
+      'ads/sandbox/stats/jobs/accounts/:account_id',
       'ads/sandbox/tailored_audience_memberships',
+      'ads/stats/jobs/accounts/:account_id',
       'ads/tailored_audience_memberships',
       'blocks/create',
       'blocks/destroy',
